--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
+    <string name="title_new_trans">Transaksi Baru</string>
+    <string name="text_nominal">Nominal</string>
+    <string name="text_kategori">Pilih Kategori</string>
+    <string name="text_keterangan">Keterangan</string>
+    <string name="text_tanggal">Tanggal</string>
 </resources>
